<resources>
    <string name="app_name">Tic Tac Toe Application</string>
    <string name="toss_button">toss button</string>
    <string name="lets_have_a_toss">Toss between Player 1/Player 2</string>
    <string name="start_game">START GAME</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="xo_image">XO Image</string>
    <string name="play">PLAY</string>
    <string name="and_the_winner_of_the_match_is">and_the_winner_of_the_match_is</string>
    <string name="rematch">rematch</string>
</resources>