<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".TossPage">


    <TextView
        android:id="@+id/winner_name"
        android:layout_width="376dp"
        android:layout_height="94dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/new_rocker"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toss_button" />

    <ImageButton
        android:id="@+id/toss_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:srcCompat="@drawable/tosslogo"
        android:contentDescription="@string/toss_button" />

    <TextView
        android:id="@+id/state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/new_rocker"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toss_button"
        app:layout_constraintEnd_toEndOf="@+id/toss_button"
        app:layout_constraintStart_toStartOf="@+id/toss_button"
        app:layout_constraintTop_toTopOf="@+id/toss_button" />

    <TextView
        android:id="@+id/toss_text"
        android:layout_width="337dp"
        android:layout_height="113dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/new_rocker"
        android:text="@string/lets_have_a_toss"
        android:textAlignment="center"
        android:textAppearance="@style/CardView.Light"
        android:textColor="#FCF200"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/new_rocker"
        android:text="@string/start_game"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_name"
        tools:visibility="invisible"
        android:padding="10dp"
        android:onClick="startGame"/>


</androidx.constraintlayout.widget.ConstraintLayout>